[gd_scene load_steps=6 format=2]

[ext_resource path="res://JesusSaves/assets/fonts/m5x7_64.tres" type="DynamicFont" id=1]
[ext_resource path="res://JesusSaves/src/UserInterface/OptionsMenu/OptionsToggle.tscn" type="PackedScene" id=2]
[ext_resource path="res://JesusSaves/src/UserInterface/OptionsMenu/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://JesusSaves/assets/fonts/m5x7_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://JesusSaves/src/UserInterface/OptionsMenu/OptionsVideo.gd" type="Script" id=5]

[node name="OptionsVideo" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 960.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "VIDEO"
align = 1

[node name="Fullscreen" parent="." instance=ExtResource( 2 )]
margin_top = 55.0
margin_right = 960.0
margin_bottom = 81.0
text = "FULLSCREEN"

[node name="Borderless" parent="." instance=ExtResource( 2 )]
margin_top = 85.0
margin_right = 960.0
margin_bottom = 111.0
text = "BORDERLESS"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 115.0
margin_right = 960.0
margin_bottom = 141.0

[node name="ScaleDown" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_top = 5.0
margin_bottom = 21.0

[node name="Label" parent="HBoxContainer/ScaleDown" index="0"]
text = "-"

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 80.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "SCALE"

[node name="ScaleUp" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 84.0
margin_top = 5.0
margin_right = 100.0
margin_bottom = 21.0
[connection signal="toggled" from="Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="pressed" from="HBoxContainer/ScaleDown" to="." method="_on_ScaleDown_pressed"]
[connection signal="pressed" from="HBoxContainer/ScaleUp" to="." method="_on_ScaleUp_pressed"]

[editable path="HBoxContainer/ScaleDown"]
